--- a/docs/slides/slides.rmd
+++ b/docs/slides/slides.rmd
@@ -1,12 +1,12 @@
 ---
-title: "Taming the Shiny beast"
-author: "Katie Masiello, Josiah Parry, Alex Gold"
+title: "APIs: you're probably not using them and why you probably should"
+author: "Katie Masiello"
 output:
   xaringan::moon_reader:
-    css: ["custom2.css","default", "default-fonts"]
+    css: ["custom2.css","default", "default-fonts","cols.css"]
     seal: false
     nature:
-      # beforeInit: "cols_macro.js"
+      beforeInit: "cols_macro.js"
       highlightStyle: github
       highlightLines: true
 editor_options: 
@@ -16,124 +16,86 @@ layout: true
 background-image: url(slides_files/RStudio-Logo-Flat.png)
 background-position: 2% 98%
 background-size: 10%
+
 ---
 name: title
 class: inverse, center, middle
-# Taming the Shiny beast
-### Katie Masiello, Josiah Parry, Alex Gold
 
-
----
 ```{r setup, include=FALSE, warning=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(magrittr)
 library(gt)
 library(flair)
+library(emo)
+library(fontawesome)
 ```
 
 ```{r include=FALSE, warning=FALSE}
 xaringanExtra::use_share_again()
-xaringanExtra::style_share_again(
-  share_buttons = c("none")
-)
+xaringanExtra::style_share_again(share_buttons = c("none"))
+xaringanExtra::use_panelset()
+
 ```
-class: center, middle  
 
-# Shiny, I love you, but...
-
----
-class: inverse
-.pull-left[
-# How it started...
-![](slides_files/babybear.png)
-] 
---
-.pull-right[
-# How it's going
-![](slides_files/beast.png)
-]
----
-
-.left-column-impact[
-<h6 > 7</h6>
-<h7>signs it's time to break up</h7>
-]
-
-.right-column[
-<br><br><br><br>
-1. It's a monolith
-
-1. Updating is scary / hard
-
-1. The idea of handing it off or inheriting it is terrifying
-
-1. Performance issues
-
-1. Redundant code
-
-1. Other teams want to use your code
-
-1. Other teams or tools don't speak R
-
-]
+# **APIs**: you're probably not using them and why you probably should
+### Presented by: **Katie Masiello**
 
 ---
-# Monolith
+class: middle, center
+#Where are you? 
+#Where is your organization?
+
+---
+# Common Pain Points
+* "I've created a Shiny beast!"
+
+* "How do we share this code with another system / group?"
+
+* "We are replicating work in every project"
+
+
+
+---
+class: inverse, center, middle
+# Changing Data Science Landscape
+
+
+---
+# Data Science in 2021  
+
+* Part of production applications  
+
+* Beyond ad hoc reports, visualizations, and dashboards  
+
+* Need to equip data scientists with production tools  
+
+* Dependence on IT   
+
+* To succeed, we need to embrace DevOps  
+
+* How? Microservices    
+
+
+---
+# Monolithic Mindset
 ```{r  out.width = "60%", echo=FALSE, eval=TRUE, fig.align='center'}
 knitr::include_graphics("slides_files/monolith.png")
 ```
 
 ---
-# Lean it out
+# Lean it out with Microservices
 ```{r  out.width = "90%", echo=FALSE, eval=TRUE, fig.align='center'}
 knitr::include_graphics("slides_files/microservices.png")
 ```
 
 ---
-class: inverse 
-
-.left-column-impact[
-<h6 style="color:#FFFFFF"> 4</h6>
-<h7>Patterns to break up big apps</h7>
-]
-
-.right-column[
-<br>
-###1. APIs &nbsp;<img src="slides_files/plumber_small.png" height="90" style="vertical-align:middle">
-
-###2. Write a  &nbsp; <img src="slides_files/pkgdown.png" height="90" style="vertical-align:middle">
-
-###3. Use &nbsp; <img src="slides_files/shiny.png" height="90" style="vertical-align:middle">&nbsp; modules
-
-###4. Write an &nbsp; <img src="slides_files/R6.png" height="90" style="vertical-align:middle">&nbsp; Class 
-
-]
----
-# The Case for Packages &nbsp; <img src="slides_files/pkgdown.png" height="90" style="vertical-align:middle">
-.pull-left[
-* One package per project
-
-* Project-level reliability
-  * Unit testing! <img src="slides_files/testthat.png" height="60" style="vertical-align:middle">
-
-* Team-wide collaboration
-  * Analytics
-  * Plotting
-  * Templates
-  * Data Access
+class: inverse, middle
 
 
+.left[###The Single Responsibility Principle]
+.center[# “Gather together those things that change for the same reason, and separate those things that change for different reasons.”]
+.right[###&ndash; Robert C. Martin]
 
-]
-.pull-right[
-![](slides_files/packagestructure.png)
-]
-<br>
-*But what if your analytics need to be shared outside of the R-ecosystem?*
-
----
-class: inverse, center, middle
-# “Gather together those things that change for the same reason, and separate those things that change for different reasons.”
 ---
 class: inverse, center, middle
 # Okay, but how?
@@ -155,106 +117,116 @@ class: inverse, center, middle
 * Think of HTTP as a universal language
 
 ---
-# Conceptualizing APIs
+# Think of APIs as a way to access functions
+General form of an API: 
+```
+http://hostname/api_endpoint/?parameter=value
+```
 
-* Think of an API like a function  
+Example function:
+```{r}
+my_function <- function(argument) {
+  some_kind_of_operation(argument)
+}
+```
 
-* Functions have arguments and do something 
+As an API: 
+```
+http://hostname/my_function/?argument=value
 
-* APIs have parameters and do something
-
-* `function(argument = value)`
-
-* `http://hostname:8888/api_endpoint/?parameter=value`
+```
 
 ---
-# Data Science Tool Box
+# Think of APIs as a universal adapter
 
-* PDF reports
+.center[<img src="slides_files/dockingstation.png" height = 325>] 
+  
+.center[<img src="slides_files/dockingstationDescription.png" width = 1000> ]
 
-* PowerPoint presentations
+---
+# The Case for APIs
+
+Traditional Data Science Tool Box
+
+* Reports
+
+* Presentations
 
 * Spreadsheets
 
 * Interactive Dashboards
 
-* *etc.*
-
-* Limited to end user consumption
-
----
-# Data Science Tool Box
-
-* PDF reports
-
-* PowerPoint presentations
-
-* Spreadsheets
-
-* Interactive Dashboards
-
-* *etc.*
-
-* **~APIs~**
+* *all limited to end user consumption*
+  
+Extend your reach with APIs!
 
 ---
-class: inverse, center, middle
+# The Case for APIs
+.pull-left[<h3 style="margin-top: 0; color: #447099;">
+Organizational </h3>
 
-# Why an API?
+* Smaller pieces are easier to manage
 
----
-# Organizational
+* Component monitoring 
 
-* Smaller pieces are easier to manage (less code!)
-
-* Component Monitoring 
-
-* Infrastructure for recycled code 
+* Infrastructure for recycled code `r emo::ji("recycling_symbol")`
 
 * Less technical debt! 
 
 * Better change management
-  * Upgrade one service at a time without bringing down whole application
 
----
-# Collaborative
+* Upgrade one service at a time without bringing down whole application
 
-* Less friction in tool handoff 
+]
 
-* Empower teams to use preferred tool chain
+.pull-right[<h3 style="margin-top: 0; color: #447099;">
+Collaborative </h3>
+
+* Less friction and effort in tool handoff 
+
+* Empower teams to use preferred tool chain `r emo::ji("fire")`
 
 * Concerned about API requests not software language
 
-* Reduced effort in tool hand off
+* No need to translate work
 
-  * No need to translate work
-  
-  * Not blocked by communication
+* Programmatic use of services
 
-* Programmatic use of services by other teams
+* *Glue together API requests! Pipelines, baby!* <img src="slides_files/pipe.png" height="20" style="vertical-align:middle">
+]
+---
+class: inverse
+name: Signs you might be ready to create an API
 
-  * Whereas dashboards require user intervention
+.left-column-impact[
+<h6 style="color:#FFFFFF">  6</h6>
+<h7>signs you might be ready to create an API</h7>
+]
 
-* **_Glue together API requests! Pipelines, baby!_** 
+.right-column[
+<br><br>
+### Redundant code (copying and pasting/reusing)
+
+### You have a large app that's hard to manage
+
+### You have common processes / business logic that should be used
+
+### Other teams want your code
+
+### Other teams may not know your language
+
+### You want to integrate different software into one toolchain
+
+]
 
 ---
-# Signs you might be ready to create an API
 
-* Redundant code (copying and pasting/reusing)
-
-* Other teams want your code
-
-* Other teams may not know your language
-
-* You want to integrate different software into one toolchain
-
----
 class: inverse, center, middle
 
 # How do you build an API?
 
 ---
-# API frameworks?
+# API frameworks
 
 * R - plumber
 
@@ -269,42 +241,15 @@ class: inverse, center, middle
 
 ---
 # Deployment Options
-.pull-left[
 
-* RStudio Connect
 
-* Digital Ocean
+* RStudio Connect <br>
+<img src="slides_files/rsc.png" height="100" style="vertical-align:middle"> 
 
-* Docker
-]
-.pull-right[
-```{r  out.width = "90%", echo=FALSE, eval=TRUE, fig.align='right'}
-knitr::include_graphics("slides_files/rsc.png")
-```
+* Digital Ocean <br><img src="slides_files/digitalocean.png" width="100" style="vertical-align:middle"> 
 
-``` {r out.width = "45%", echo=FALSE, eval=TRUE, fig.align='right'}
-knitr::include_graphics("slides_files/digitalocean.png")
-knitr::include_graphics("slides_files/docker.png")
-```
-]
----
-class: center, middle
+* Docker <br><img src="slides_files/docker.png" width="100" style="vertical-align:middle"> 
 
-# Why limit your stack to
-![](slides_files/streamlit_small.png)
-![](slides_files/shiny_small.png) ![](slides_files/plotly_small.png)
-
----
-class: center, middle
-
-# When it could be this
-
-![](slides_files/shiny_small.png)
-![](slides_files/plumber_small.png) <br>
-![](slides_files/plotly_small.png)
-![](slides_files/flask_small.png)
-![](slides_files/streamlit_small.png)
-![](slides_files/nodejs_small.png)
 
 ---
 class: inverse, center, middle
@@ -341,294 +286,331 @@ class: inverse, center, middle
   
 * Other methods:
   * PUT
-  * DELETE (yikes!)
+  * DELETE (yikes!) `r emo::ji("skull_and_crossbones")`
   * HEAD
-  * … 
+  * …  
+
+
 ---
-# APIs as a Maturity Process 
+# Example: Go/No-Go Model
 
-* The one off analysis
+![:col_header <img src="slides_files/info-sec.png" height="100" style="vertical-align:middle";>, 
+<img src="slides_files/statistician.png" height="100" style="vertical-align:middle";>, 
+<img src="slides_files/jr-analyst.png" height="100" style="vertical-align:middle"; >]
+![:col_row Susan has built a tool in R that provides Go/No-Go assertions,
+Andrea needs to incorporate these assertions into her Python code to predict if it will rain, 
+Mateo needs his daily metrics shown in Tableau to reflect these assertions]
 
-* The *what ifs*?
+--
+```{r script, echo=TRUE}
+#Go/No-Go script
+sample(c("heads", "tails"), 1, 
+       prob = c(0.5, 0.5), 
+       replace = TRUE)
+```
+--
+Yeah, it's a coin toss. Let's keep it simple. `r emo::ji("smile")`
 
-  * Parameterized Rmd
-
-  * Shiny Dashboard
-
-* Need programmatic access  
-
-  * Function
-  
-  * API
-  
 ---
-# Example: Global Crop Yields
-.pull-left[
-* [TidyTuesday Week 36, 2020](https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-09-01/readme.md) 
-
-* Goal: 
-  * Fetch crop yields for a given crop, year, and country 
-  
-* Ad hoc analysis 
-
-* Parameterized Rmd
-
-* Function 
-
-* Plumber API
+class: inverse
+.left-column-impact[
+<h6 style="color:#FFFFFF">4</h6>
+<h7 style="color:#d6d6d6">steps to making a plumber API</h7>
 ]
 
-.pull-right[
-![](slides_files/harvester.png)
+.right-column[
+<br><br><br>
+###1. Make it functional
+###2. Add `plumber` decorations
+###3. Save as **`plumber.r`**
+###4. Publish
 ]
 ---
-# Example: ad hoc analaysis
-```{r eval=FALSE}
-library(tidyverse)
+# Make it functional
 
-crop_yields <- read_csv("data/crop_yields.csv")
-
-# We could filter our data set
-filter(crop_yields,
-      year == 2018,        
-      product == "maize",
-      entity == "cuba")
-
-## # A tibble: 1 x 4
-##   entity  year product crop_yield
-##   <chr>  <dbl> <chr>        <dbl>
-## 1 cuba    2018 maize         2.39
-
-```
----
-# [Parameterized Rmd](https://colorado.rstudio.com/rsc/connect/#/apps/7597/access/4133)
-```{r  out.width = "100%", echo=FALSE, eval=TRUE, fig.align='center'}
-knitr::include_graphics("slides_files/parameterized.png")
-```
----
-# Making it functional
+.panelset[
+.panel[.panel-name[Function basics]
 * Functions are code shortcuts!
 
 * Functions are a special kind of object
 
 * Arguments are placeholders
 
-* Whatever is printed last is returned
+* Things that change should be arguments
+
+* Whatever is printed last is returned]
+.panel[.panel-name[Coin Toss Function]
+```{r coin_toss, include=FALSE}
+sample(c("heads", "tails"), 1, 
+       prob = c(0.5, 0.5), replace = TRUE)
+
+#Function 1: toss once and give me a heads or tails output 
+coin_toss <- function() {
+  sample(c("heads", "tails"), 1, 
+         prob = c(0.5, 0.5), replace = TRUE)
+}
+coin_toss()
+```
+
+```{r, echo=FALSE}
+decorate("coin_toss") %>% 
+  flair("function") %>% 
+  knit_print.with_flair()
+```
+
+
+]
+.panel[.panel-name[Multi-Toss Function]
+
+```{r multi_toss, include=FALSE}
+sample(c("heads", "tails"), 1, 
+       prob = c(0.5, 0.5), replace = TRUE)
+
+#Function 2: toss multiple times and summarize output
+multi_toss <- function(n) {
+  table(sample(c("heads", "tails"), n, 
+               prob = c(0.5, 0.5), replace = TRUE)) %>% 
+    as.data.frame()
+}
+multi_toss(500)
+```
+
+```{r, echo=FALSE}
+decorate("multi_toss") %>% 
+  flair_rx("\\bn\\b") %>% flair("1") %>% flair("500") %>% 
+  knit_print.with_flair()
+```
+
+]
+]
+
+---
+#You’ve basically made an API already
 
 ```{r}
-my_fun <- function(arg) {
- # do something with the argument
- arg
+#Function 1: toss once and give me a heads or tails output 
+coin_toss <- function() {
+  sample(c("heads", "tails"), 1, 
+         prob = c(0.5, 0.5), 
+         replace = TRUE)
 }
 
-my_fun("Hello!")
-## [1] "Hello!"
-```
----
-# What is changing?
-
-* Things that change should be arguments  
-```{r, echo=FALSE}
-decorate("filter(crop_yields, 
-         year == 2018, 
-         product == \"maize\", 
-         entity == \"cuba\")", eval=FALSE) %>% 
-  flair("2018") %>%
-  flair("\"maize\"") %>% 
-  flair("\"cuba\"") %>% 
-  knit_print.with_flair()
-```
-
-* Making the skeleton  
-```{r echo=FALSE}
-decorate("filter_yields <- function(.year, .product, .entity) {
-	 # This is where our filtering will go! 
-}", eval=FALSE) %>% 
-  flair(".year") %>%
-  flair(".product") %>% 
-  flair(".entity") %>% 
-  knit_print.with_flair()
-```
-
-* Using a '.' to avoid confusion in the `filter()`
----
-# Example: making it functional
-```{r eval=FALSE}
-filter_yields <- function(.year, .product, .entity) {
-
- filter(crop_yields,
-      year == .year,
-      product == .product,
-      entity == .entity)
+#Function 2: toss multiple times and summarize output
+multi_toss <- function(n) {
+  table(sample(c("heads", "tails"), n, 
+               prob = c(0.5, 0.5), 
+               replace = TRUE)) %>% as.data.frame()
 }
-
-filter_yields(2012, "potatoes", "guatemala")
-
-## # A tibble: 1 x 4
-##   entity     year product  crop_yield
-##   <chr>     <dbl> <chr>         <dbl>
-## 1 guatemala  2012 potatoes       25.0
-
-
 ```
 
----
-class: inverse, center, middle
-# You’ve basically made an API already
 
----
-class: inverse, center, middle
-
-
-
-```{r, results = "asis", echo = FALSE}
-"https://colorado.rstudio.com/rsc/crop-yield-api/crop-yield ?.year=1978&.product=cassava&.entity=congo" %>%
-  flair("https://colorado.rstudio.com/rsc/", color = "tomato") %>%
-  flair("crop-yield-api/", color = "cornflowerblue") %>%
-  flair("crop-yield ", color = "orange") %>%
-  flair("?.year=1978&.product=cassava&.entity=congo", color = "darkseagreen") %>% 
-  flair_all(before = "<h1>", after = "</h1>") %>%
-  cat()
-```
-
-## <span style="color:tomato">host/</span><span style="color:cornflowerblue">RSC content path/</span><span style="color:orange">endpoint</span><span style="color:darkseagreen">?parameters</span>
 ---
 # The API
 ```{r, API, eval=FALSE}
 library(plumber)
-library(tidyverse)
 
-crop_yields <- read_csv("data/crop_yields.csv")
+#* @apiTitle Coin Toss API
 
-#* @apiTitle Crop Yields API
-#* Return crop yields for a given product, year, and entity.
-#* @param .year The year of interest (1961 - 2018)
-#* @param .product The crop of interest. One of wheat, rice, maize, soybeans, potatoes, beans, peas, cassava, barley, cocoa beans, or bananas.
-#* @param .entity The country of interest.
-#* @get /crop-yield
+#* Toss a coin once and give the result
+#* @get /coin_toss
 
-function(.year, .product, .entity) {
- filter(crop_yields,
-        year == .year,
-        product == .product,
-        entity == .entity)
+function() {
+  sample(c("heads", "tails"), 1, 
+         prob = c(0.5, 0.5), replace = TRUE)
 }
 
+#* Toss a coin multiple times and summarize output
+#* @param n the number of times to toss the coin
+#* @get /multi_toss
 
-```
----
-# The API
-```r
-library(plumber)
-library(tidyverse)
-
-crop_yields <- read_csv("data/crop_yields.csv") 
-
-*#* @apiTitle Crop Yields API 
-#* Return crop yields for a given product, year, and entity.
-#* @param .year The year of interest (1961 - 2018)
-#* @param .product The crop of interest. One of wheat, rice, maize, soybeans, potatoes, beans, peas, cassava, barley, cocoa beans, or bananas.
-#* @param .entity The country of interest.
-#* @get /crop-yield
-
-function(.year, .product, .entity) {
- filter(crop_yields,
-        year == .year,
-        product == .product,
-        entity == .entity)
+function(n) {
+  as.data.frame(
+    table(sample(c("heads", "tails"), n, 
+                 prob = c(0.5, 0.5), replace = TRUE)))
 }
 
 ```
 ---
-# The API
-```r
+# The API - plumber code decoration `#*`
+```{r, eval=FALSE}
 library(plumber)
-library(tidyverse)
 
-crop_yields <- read_csv("data/crop_yields.csv") 
+*#* @apiTitle Coin Toss API
 
-#* @apiTitle Crop Yields API 
-*#* Return crop yields for a given product, year, and entity.
-#* @param .year The year of interest (1961 - 2018)
-#* @param .product The crop of interest. One of wheat, rice, maize, soybeans, potatoes, beans, peas, cassava, barley, cocoa beans, or bananas.
-#* @param .entity The country of interest.
-#* @get /crop-yield
+#* Toss a coin once and give the result
+#* @get /coin_toss
 
-function(.year, .product, .entity) {
- filter(crop_yields,
-        year == .year,
-        product == .product,
-        entity == .entity)
+function() {
+  sample(c("heads", "tails"), 1, 
+         prob = c(0.5, 0.5), replace = TRUE)
 }
 
+#* Toss a coin multiple times and summarize output
+#* @param n the number of times to toss the coin
+#* @get /multi_toss
+
+function(n) {
+  as.data.frame(
+    table(sample(c("heads", "tails"), n, 
+                 prob = c(0.5, 0.5), replace = TRUE)))
+}
 ```
 ---
-# The API
-```r
+# The API - plumber code decoration `#*`
+```{r, eval=FALSE}
 library(plumber)
-library(tidyverse)
 
-crop_yields <- read_csv("data/crop_yields.csv") 
+#* @apiTitle Coin Toss API
 
-#* @apiTitle Crop Yields API 
-#* Return crop yields for a given product, year, and entity.
-*#* @param .year The year of interest (1961 - 2018)
-*#* @param .product The crop of interest. One of wheat, rice, maize, soybeans, potatoes, beans, peas, cassava, barley, cocoa beans, or bananas.
-*#* @param .entity The country of interest.
-#* @get /crop-yield
+*#* Toss a coin once and give the result
+#* @get /coin_toss
 
-function(.year, .product, .entity) {
- filter(crop_yields,
-        year == .year,
-        product == .product,
-        entity == .entity)
+function() {
+  sample(c("heads", "tails"), 1, 
+         prob = c(0.5, 0.5), replace = TRUE)
 }
 
+*#* Toss a coin multiple times and summarize output
+#* @param n the number of times to toss the coin
+#* @get /multi_toss
+
+function(n) {
+  as.data.frame(
+    table(sample(c("heads", "tails"), n, 
+                 prob = c(0.5, 0.5), replace = TRUE)))
+}
 ```
 ---
-# The API
-```r
+## The API - plumber code decoration `#*`
+```{r, eval=FALSE}
 library(plumber)
-library(tidyverse)
 
-crop_yields <- read_csv("data/crop_yields.csv") 
+#* @apiTitle Coin Toss API
 
-#* @apiTitle Crop Yields API 
-#* Return crop yields for a given product, year, and entity.
-#* @param .year The year of interest (1961 - 2018)
-#* @param .product The crop of interest. One of wheat, rice, maize, soybeans, potatoes, beans, peas, cassava, barley, cocoa beans, or bananas.
-#* @param .entity The country of interest.
-*#* @get /crop-yield
+#* Toss a coin once and give the result
+#* @get /coin_toss
 
-function(.year, .product, .entity) {
- filter(crop_yields,
-        year == .year,
-        product == .product,
-        entity == .entity)
+function() {
+  sample(c("heads", "tails"), 1, 
+         prob = c(0.5, 0.5), replace = TRUE)
 }
 
+#* Toss a coin multiple times and summarize output
+*#* @param n the number of times to toss the coin
+#* @get /multi_toss
+
+function(n) {
+  as.data.frame(
+    table(sample(c("heads", "tails"), n, 
+                 prob = c(0.5, 0.5), replace = TRUE)))
+}
+```
+---
+# The API - plumber code decoration `#*`
+```{r, eval=FALSE}
+library(plumber)
+
+#* @apiTitle Coin Toss API
+
+#* Toss a coin once and give the result
+*#* @get /coin_toss
+
+function() {
+  sample(c("heads", "tails"), 1, 
+         prob = c(0.5, 0.5), replace = TRUE)
+}
+
+#* Toss a coin multiple times and summarize output
+#* @param n the number of times to toss the coin
+*#* @get /multi_toss
+
+function(n) {
+  as.data.frame(
+    table(sample(c("heads", "tails"), n, 
+                 prob = c(0.5, 0.5), replace = TRUE)))
+}
 ```
 ---
 class: inverse, center, middle
 # The Swagger Interface
+
+???
+When you save and run your API locally in the RStudio IDE, the Swagger interface allows you to interact with the API and test it
 ---
 # Swagger
-```{r  out.width = "100%", echo=FALSE, eval=TRUE, fig.align='center'}
+```{r  out.width = "80%", echo=FALSE, eval=TRUE, fig.align='center'}
 knitr::include_graphics("slides_files/swagger.png")
 ```
 ---
-class: inverse, center, middle
-# Calling the API from R {httr}
+# Publish the API 
+Using RStudio Connect (push button deployment, git-backed deployment, or programmatic)
+.center[**<https://colorado.rstudio.com/rsc/coin_api/>**]
+
+```{r  out.width = "80%", echo=FALSE, eval=TRUE, fig.align='center'}
+knitr::include_graphics("slides_files/published.png")
+```
 ---
-# API Call Steps:
+class: inverse, middle, center
 
-* This pattern is the same for all languages
+#What have we done?
+---
+#Query our API from a browser
+Single Coin Toss: 
+<https://colorado.rstudio.com/rsc/coin_api/coin_toss>  <br><br>
+<img src="slides_files/coin_toss_result.png"  style="vertical-align:middle">  
+Multi Coin Toss: 
+<https://colorado.rstudio.com/rsc/coin_api/multi_toss?n=40> <br><br>
+<img src="slides_files/multi_toss_result.png"  style="vertical-align:middle">  
+---
+# Elements of our API call
 
-* Generate the query URL
+`#* Toss a coin multiple times and summarize output`  
+<span style="color:darkseagreen">`#* @param n the number of times to toss the coin`</span>  
+<span style="color:orange">`#* @get /multi_toss`</span>  
+```
+function(n) {
+  as.data.frame(
+    table(sample(c("heads", "tails"), n, 
+                 prob = c(0.5, 0.5), replace = TRUE)))
+}
+```
 
-* Make the request 
 
-* Parse the response 
+.center[
+```{r, results = "asis", echo = FALSE}
+"https://colorado.rstudio.com/rsc/ coin_api/multi_toss?n=40" %>%
+  flair("https://colorado.rstudio.com/rsc/", color = "tomato") %>%
+  flair("coin_api/", color = "cornflowerblue") %>%
+  flair("multi_toss", color = "orange") %>%
+  flair("?n=40", color = "darkseagreen") %>% 
+  flair_all(before = "<h2>", after = "</h2>") %>%
+  cat()
+```
+
+## <span style="color:tomato">host/</span><span style="color:cornflowerblue">RSC content path/</span><br><span style="color:orange">endpoint</span><span style="color:darkseagreen">?parameters</span>
+]
+---
+class: inverse, middle, center
+# That's great, now how do I use it?
+---
+class: inverse, middle, center
+# Calling the API from R {httr}
+
+---
+.left-column-impact[
+<h7 style="color:#447099"><br><br>API Call Steps</h7>
+]
+
+.right-column[
+<br><br>
+* ###Generate the query URL
+
+* ###Make the request 
+
+* ###Parse the response 
+
+* ###(This pattern is the same for all languages)
+]
 ---
 # Creating the URL
 
@@ -636,21 +618,22 @@ class: inverse, center, middle
 
 2. Create named list with parameters and values  
 
-3. Use modify_url() to fill in parameters  
+3. Use `modify_url()` to fill in parameters  
 
 ```{r, eval=FALSE}
 library(httr)
-b_url <- 
- "https://colorado.rstudio.com/rsc/crop-yield-api/crop-yield"
+base_url <- 
+ "https://colorado.rstudio.com/rsc/coin_api/"
 
-params <- list(.year = 1975, 
-               .product = "beans", 
-               .entity = "germany")
+endpoint <- "multi_toss"
 
-{{ (query_url <- modify_url(url = b_url, query = params)) }}
+params <- list(n = 1000)
+
+{{query_url <- modify_url(url = paste0(base_url, endpoint), }}
+                              {{query = params) }}
 
 ```
-`[1] "https://colorado.rstudio.com/rsc/crop-yield-api/crop-yield?.year=1975&.product=beans&.entity=germany"`
+`[1] "https://colorado.rstudio.com/rsc/coin_api/multi_toss?n=1000"`
 ---
 # Send the request
 
@@ -658,32 +641,54 @@ params <- list(.year = 1975,
 
   * e.g. `GET()`, `POST()`, `PUT()`
 
-<span style="background-color:#fff2cc">`(res <- GET(query_url))`</span>
 
-`## Response` 
+<span style="background-color:#fff2cc">`response <- GET(query_url)`</span>
 
-`[https://colorado.rstudio.com/rsc/crop-yield-api/crop-yield?.year=1975&.product=beans&.entity=germany]`
+```
+> GET(query_url) 
+Response [https://colorado.rstudio.com/rsc/coin_api/coin_toss]
+  Date: 2021-01-08 18:56
+  Status: 200
+  Content-Type: application/json
+  Size: 9 B
+```
 
-`##   Date: 2020-11-08 20:34`  
-`##   Status: 200`  
-`##   Content-Type: application/json`  
-`##   Size: 72 B`
+`r emo::ji("thinking")`   
 ---
 # Parse the request
 
-```r
+```{r eval=FALSE}
 
-*(resp_raw <- content(res, as = "text"))
+{{(respponse_raw <- content(response, as = "text"))}}
 
+## [1] "[{\"Var1\":\"heads\",\"Freq\":500},{\"Var1\":\"tails\",\"Freq\":500}]" 
 
-"[{\"entity\":\"germany\",\"year\":1975,\"product\":\"beans\",\"crop_yield\":2.8749}]" 
+{{jsonlite::fromJSON(response_raw)}}
 
-*jsonlite::fromJSON(resp_raw)
-
-
-##    entity year product crop_yield
-## 1 germany 1975   beans     2.8749
+##    Var1 Freq
+## 1 heads  515
+## 2 tails  485
 ```
+
+Putting everything together:
+```{r eval=FALSE}
+(response <- GET(query_url) %>% 
+   content(as = "text") %>% jsonlite::fromJSON())
+
+##    Var1 Freq
+## 1 heads  511
+## 2 tails  489
+```
+
+---
+class: inverse, middle, center
+
+# What have we done?
+## `r fa(name = "check-square", fill = "white")` &nbsp; Turned our R code into an API  
+## `r fa(name = "check-square", fill = "white")` &nbsp; Call an API for use in R 
+
+
+# `r emo::ji("tada")`
 ---
 class: inverse, middle, center
 # Recap
@@ -701,10 +706,85 @@ class: inverse, middle, center
 * Reduce communication barriers
  
 * Enable programmatic use of tools
+---
+# Brainstorm: API Ideas
 
+* Query your model or database via Slack integration
+
+* Standardize your data munging and other business logic 
+
+* 
 ---
 class: inverse, middle, center
 # Thank you!
 ---
 class: inverse, middle, center
 # Let's talk about it.
+
+---
+
+class: center, middle  
+
+# Shiny, I love you, but...
+
+---
+name: how it's going
+class: inverse
+.pull-left[
+# How it started...
+![](slides_files/babybear.png)
+] 
+--
+.pull-right[
+# How it's going
+![](slides_files/beast.png)
+]
+
+???
+Often we start with a Shiny app that is a great fit for a problem.  But over time, often the app evolves. It can grow in complexity, or be tested to its limits as it becomes business critical. The care and feeding of the app can become burdensome.
+---
+name: signs it's time to break up
+.left-column-impact[
+<h6 > 7</h6>
+<h7>signs it's time to break up</h7>
+]
+
+.right-column[
+<br><br><br><br>
+1. It's a monolith
+
+1. Updating is scary / hard
+
+1. The idea of handing it off or inheriting it is terrifying
+
+1. Performance issues
+
+1. Redundant code
+
+1. Other teams want to use your code
+
+1. Other teams or tools don't speak R
+
+]
+
+---
+name: patterns to break up
+class: inverse 
+
+.left-column-impact[
+<h6 style="color:#FFFFFF"> 4</h6>
+<h7>Patterns to break up big apps</h7>
+]
+
+.right-column[
+<br>
+###1. Smart data refresh (e.g. &nbsp;<img src="slides_files/pins.png" height="90" style="vertical-align:middle">)
+
+###2. Write a  &nbsp; <img src="slides_files/pkg.png" height="90" style="vertical-align:middle">
+
+###3. APIs &nbsp;<img src="slides_files/plumber_small.png" height="90" style="vertical-align:middle">
+
+###4. Use &nbsp; <img src="slides_files/shiny.png" height="90" style="vertical-align:middle">&nbsp; modules
+
+]
+---
